# sotto

./: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
docs/: ARCHITECTURE.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/macos/: Info.plist
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tests/: arch_compatibility.rs  mod.rs
