[package]
name = "sotto"
version = "0.2.0"
description = "Open-source voice transcription app for macOS."
authors = ["Galstyan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sotto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
cpal = "0.16"
parking_lot = "0.12"
enigo = "0.6"
chrono = "0.4"
whisper-rs = { version = "0.15", features = ["metal"] }
rubato = "0.16"
reqwest = { version = "0.12", features = ["blocking"] }
